# job-application-monitor

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  EVALUATION_GUIDE.md  EVAL_SETUP.md  Makefile  README.md  docker-compose.yml  monitor_job_apps.py  pyproject.toml  requirements.txt  setup_eval.sh  start.sh
.claude/: settings.local.json
backend/: .env.example  pyproject.toml
backend/job_monitor/: __init__.py  config.py  database.py  dedupe.py  logging_config.py  main.py  models.py  schemas.py
backend/job_monitor/api/: applications.py  emails.py  export.py  journeys.py  scan.py  stats.py
backend/job_monitor/auth/: api.py  deps.py  oauth_google.py  security.py  tokens.py
backend/job_monitor/email/: __init__.py  classifier.py  client.py  gmail_client.py  parser.py
backend/job_monitor/eval/: __init__.py  api.py  cache.py  metrics.py  models.py  runner.py  schemas.py
backend/job_monitor/export/: __init__.py  csv_export.py  excel_export.py
backend/job_monitor/extraction/: __init__.py  core.py  llm.py  pipeline.py  rules.py
backend/job_monitor/linking/: __init__.py  resolver.py
backend/tests/: test_application_merge_unmerge.py  test_company_reapplication_date_gate.py  test_email_classifier_non_job_reason.py  test_extraction_core_shared.py  test_journey_scoping.py  test_recruiter_reach_out_pipeline.py  test_thread_linking.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
plans/: architecture.md  email-linking-strategy.md  evaluation-framework.md  grouping-improvement-plan.md  linking-improvement-plan.md  (+3 more)
(+28 files in other folders)
